# COACH

./: Cargo.toml  README.md  design.graphql
examples/: unix-linux.md  windows.md
src/: cli.rs  main.rs
src/actions/: auth.rs  file_ops.rs  mod.rs  system_ops.rs
src/config/: cue_handler.rs  mod.rs  yaml_handler.rs
src/network/: connection.rs  mod.rs
src/utils/: mod.rs  permission.rs
