[package]
name = "coach"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.11"
ldap3 = "0.11.5"
query-wmi = "1.1.3"
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde_yaml = "0.9.34"
ssh2 = "0.9.4"
toml = "0.8.17"
winapi = {version = "0.3.9", features = ["winuser"]}
